[project]
name = "ietfparse"
dynamic = ["version"]
description = "Parse formats defined in IETF RFCs"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [ { name = "Dave Shawley", email = "daveshawley@gmail.com" } ]
classifiers = [
	"Intended Audience :: Developers",
	"License :: OSI Approved :: BSD License",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Development Status :: 5 - Production/Stable",
	"Environment :: Web Environment",
	"Topic :: Internet :: WWW/HTTP",
	"Topic :: Text Processing",
	"Typing :: Typed"
]

[project.urls]
Documentation = "https://ietfparse.readthedocs.io/"
"Source Code" = "https://github.com/dave-shawley/ietfparse"
"Code Coverage" = "https://coveralls.io/github/dave-shawley/ietfparse"
Maintainability = "https://codeclimate.com/github/dave-shawley/ietfparse/"

[project.optional-dependencies]
dev = [
	"coverage[toml]>=7.6,<8",
	"mkdocs-material>=9.5.42,<10",
	"mkdocstrings[python]>=0.26.2,<0.27",
	"mypy>=1.13,<2",
	"pre-commit>=4.0.1,<5",
	"pymdown-ietflinks==0.0.0; python_version >= '3.12'",
	"pytest>=8.3,<9",
	"ruff>=0.7,<0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "ietfparse/__init__.py"
pattern = "version = '(?P<version>[^']*)'"

[tool.hatch.build.targets.sdist]
include = [
	"/.circleci",
	"/docs",
	"/ietfparse",
	"/tests",
	"/.codeclimate.yml",
	"/.readthedocs.yml",
	"/AUTHORS.md",
	"/CONTRIBUTING.md",
	"/sonar-project.properties",
]

[tool.hatch.envs.default]
features = ["dev"]
python = "3.12"

[tool.hatch.envs.default.scripts]
build-docs = [
	"mkdocs build --strict --site-dir build/docs"
]
build-report = [
	"python -m coverage combine --data-file coverage/data coverage/data-*",
	"python -m coverage report --data-file coverage/data",
	"python -m coverage xml --data-file coverage/data -o coverage/coverage.xml",
]
lint = [
	"pre-commit run --all-files",
	"mypy -p ietfparse -p tests",
]
serve-docs = ["mkdocs serve -w ietfparse -w docs"]
test = [
	"pre-commit run --all-files",
	"mypy -p ietfparse -p tests",
	"python -m coverage run -m pytest tests",
	"python -m coverage report"
]

[tool.hatch.envs.ci]
dependencies = [
	"coverage[toml]>=7.6",
	"pytest>=7.1.2,<8",
]

[tool.hatch.envs.ci.scripts]
test = [
	"python -m coverage run -m pytest --junit-xml=test-results/junit.xml tests",
	"python -m coverage xml",
	"mkdir -p coverage",
	"cp .coverage coverage/data-{matrix:python:3.12}",
]

[[tool.hatch.envs.ci.matrix]]
python = ["3.9", "3.10", "3.11", "3.12", "3.13"]

[tool.coverage.report]
exclude_also = ["if typing.TYPE_CHECKING"]
show_missing = true

[tool.coverage.run]
branch = true
source = ["ietfparse"]

[tool.mypy]
show_error_codes = true
strict = true

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
	"COM812",	# conflicts with ruff formatter
	"D203",		# need to select between D203 and D211 for formatter
	"D213",		# need to select between D212 and D213 for formatter
	"ISC001",	# conflicts with ruff formatter

	"ANN101",	# type annotation not required for `self`
	"ANN102",	# type annotation not required for `cls`
	"D104",		# No need for docstring at the package level
	"D105",		# No need for docstrings in magic methods
	"D107",		# __init__ params are in the class docstring
	"N818",		# Exception class names don't end in "Error"
	"PT",   	# I don't like pytest conventions
	"EM101",	# Passing literal messages in raise is fine
	"EM102",	# Passing f-strings in raise is fine
	"TRY003",	# Passing literal messages in raise is fine
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
	"D",    	# tests don't require docs
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
