[project]
name = "ietfparse"
version = "2.0.0a1"
description = "Parse formats defined in IETF RFCs"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [{ name = "Dave Shawley", email = "daveshawley@gmail.com" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Text Processing",
  "Typing :: Typed"
]

[project.urls]
"Code Coverage" = "https://app.codecov.io/gh/dave-shawley/ietfparse"
"Code Quality" = "https://sonarcloud.io/summary/overall?id=dave-shawley-github_ietfparse"
Documentation = "https://dave-shawley.github.io/ietfparse/"
"Source Code" = "https://github.com/dave-shawley/ietfparse"

[project.scripts]
ietfparse-test = "ietfparse.test.cli:app"

[project.optional-dependencies]
tests = [
  "rich>=14,<16",
  "tomli>=2 ; python_version < '3.11'",
  "typer>=0.16,<1",
]

[dependency-groups]
dev = [
  "coverage[toml]~=7.14",
  "mkdocs-material~=9.5",
  "mkdocstrings-python>=1.12,<3.0",
  "mkdocstrings[python]>=0.26,<2.0",
  "pre-commit~=4.0",
  "pymdown-ietflinks==0.0.0 ; python_full_version >= '3.12'",
  "pyrefly>=0.64.1",
  "pytest~=9.0",
  "pytest-cov~=7.1",
  "rich>=14,<16",
  "ruff>=0.15",
  "tomli>=2 ; python_full_version < '3.11'",
  "ty>=0.0.34",
  "typer>=0.16,<1",
  "zensical>=0.0.41",
  { include-group = "perftest" },
]
perftest = [
  "httpx>=0.28.1",
  "requests>=2.33.1",
  "werkzeug>=3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.report]
exclude_also = ["if t.TYPE_CHECKING", "\\.\\.\\.", "raise AssertionError"]
show_missing = true

[tool.coverage.run]
branch = true
source = ["src/ietfparse"]

[tool.hatch.build.targets.wheel]
packages = ["src/ietfparse"]

[tool.pyrefly]
min-severity = "warn"
preset = "strict"
permissive-ignores = true

[tool.pyrefly.errors]
missing-override-decorator = false

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",  # conflicts with ruff formatter
  "D203",  # need to select between D203 and D211 for formatter
  "D213",  # need to select between D212 and D213 for formatter
  "ISC001",  # conflicts with ruff formatter

  "D104",  # No need for docstring at the package level
  "D105",  # No need for docstrings in magic methods
  "D107",  # __init__ params are in the class docstring
  "N818",  # Exception class names don't end in "Error"
  "PT",  # I don't like pytest conventions
  "EM101",  # Passing literal messages in raise is fine
  "EM102",  # Passing f-strings in raise is fine
  "TRY003",  # Passing literal messages in raise is fine
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "D",  # tests don't require docs
  "SLF001",  # allow private member access
]
"tools/profile_benchmark.py" = [
  "BLE",  # required to insulate from regression test data
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ty.environment]
python-version = "3.12"
