[metadata]
name = ietfparse
version = attr:ietfparse.version
description = Parse formats defined in IETF RFCs
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/dave-shawley/ietfparse
author = Dave Shawley
author_email = daveshawley@gmail.com
project_urls =
    Documentation = https://ietfparse.readthedocs.io/
    Source Code = https://github.com/dave-shawley/ietfparse
    Code Coverage = https://coveralls.io/github/dave-shawley/ietfparse
    Maintainability = https://codeclimate.com/github/dave-shawley/ietfparse/
license = BSD
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Topic :: Internet :: WWW/HTTP
    Topic :: Text Processing
platforms = any
zip_safe = True

[options]
include_package_data = True
packages = find:

[options.extras_require]
dev =
    coverage==5.3
    flake8==3.8.4
    mock>1.0,<2; python_version<"3"
    mypy==0.790
    sphinx==3.3.0
    sphinxcontrib-httpdomain==1.7.0
    tox==3.20.1
    yapf==0.29.0
test =
    coverage==5.3
    mock>1.0,<2; python_version<"3"

[options.packages.find]
exclude =
    tests
    tests.*

#=============================================================================
[bdist_wheel]
universal = 1

[build_sphinx]
all-files = 1

[coverage:report]
show_missing = 1

[coverage:run]
branch = 1
source = ietfparse

[flake8]
exclude = build,dist,doc,env

[yapf]
allow_split_before_dict_value = False
split_before_logical_operator = True
