[metadata]
name = ietfparse
version = attr:ietfparse.version
description = Parse formats defined in IETF RFCs
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/dave-shawley/ietfparse
author = Dave Shawley
author_email = daveshawley@gmail.com
project_urls =
    Documentation = https://ietfparse.readthedocs.io/
    Source Code = https://github.com/dave-shawley/ietfparse
    Code Coverage = https://coveralls.io/github/dave-shawley/ietfparse
    Maintainability = https://codeclimate.com/github/dave-shawley/ietfparse/
license = BSD
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Topic :: Internet :: WWW/HTTP
    Topic :: Text Processing
    Typing :: Typed
platforms = any
zip_safe = True

[options]
include_package_data = True
packages = find:

[options.extras_require]
dev =
    coverage==5.5
    flake8==3.9.2
    mypy==0.910
    sphinx==5.0.2
    sphinxcontrib-httpdomain==1.8.0
    sphinx-autodoc-typehints==1.18.3
    sphinx-material==0.0.35
    tox==3.24.1
    yapf==0.31.0
test =
    coverage==5.5

[options.packages.find]
exclude =
    tests
    tests.*

#=============================================================================

[build_sphinx]
all-files = 1

[coverage:report]
show_missing = 1

[coverage:run]
branch = 1
source = ietfparse

[flake8]
exclude = build,dist,doc,env

[yapf]
allow_split_before_dict_value = False
split_before_logical_operator = True
